gccida/g0/find_regno_fusage
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_regno_fusage/src/rtlanal.c:2363:35: error: must use 'enum' tag to refer to type 'rtx_code'
int  find_regno_fusage( rtx insn, rtx_code code, unsigned int regno) 
                                  ^
                                  enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_regno_fusage/src/rtlanal.c:2376:20: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( link = ( rtx)insn[4]; link; link = ( rtx)link[1] ) 
                   ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_regno_fusage/src/rtlanal.c:2376:48: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( link = ( rtx)insn[4]; link; link = ( rtx)link[1] ) 
                                               ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_regno_fusage/src/rtlanal.c:2378:12: error: expected identifier or '('
 struct op = link->fld[0].rtx; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_regno_fusage/src/rtlanal.c:2410:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v4 = mode_class_0[*( ( unsigned __int8 *)reg + 2)] == MODE_COMPLEX_INT 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_regno_fusage/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_regno_fusage/src/rtlanal.c:2411:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[*( ( unsigned __int8 *)reg + 2)] == MODE_COMPLEX_FLOAT 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_regno_fusage/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_regno_fusage/src/obj/rtlanal.o] Error 1
